--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">SiREM</string>
     <string name="action_settings">Settings</string>
+    <string name="sirem">SiReM</string>
+    <string name="usuario">Usuario</string>
+    <string name="contrasena">Contraseña</string>
+    <string name="tratamiento">Tratamiento</string>
+    <string name="progreso">Progreso</string>
+    <string name="perfil">Perfil</string>
 </resources>
